# spiceweasel

./: .gitignore  pyproject.toml  readme.md
.github/workflows/: python.yaml
c/src/: kalman.c  kalman.h  matrix.c  matrix.h  rk4.c  rk4.h
cpp/: CMakeLists.txt  format-code.sh  readme.md
cpp/dev/alt/: cArray.cpp  cBaseMath.cpp  cCDKF.cpp  cMathlib.h  cMatrix.cpp  cRk4.cpp  cRk4.h  cVector.cpp
cpp/dev/c/src/: kalman.c  kalman.h  matrix.c  matrix.h  rk4.c  rk4.h
cpp/examples/: CMakeLists.txt  extended.cpp  jacobian.cpp  simple.cpp
cpp/gtests/: CMakeLists.txt  main-gtest.cpp
cpp/src/: cBaseMath.cpp  cDKF.cpp  cKalmanFilter.cpp  cKalmanFilter.h  cMathlib.h  cMatrix.cpp  cRk4.cpp  cRk4.h  cVector.cpp  ekf.hpp  kf.hpp  kf_1d.hpp  median_filter.hpp  spiceweasel.hpp
python/: pyproject.toml  readme.md
python/tests/: test_spice.py
spiceweasel/: ekf.py
